--- a/matoa/css/style.css
+++ b/matoa/css/style.css
@@ -590,6 +590,26 @@ body::after {
   transition: border-bottom 0.3s ease 0s;
 }
 
+.old-price {
+  line-height: 1.5;
+  /* 24/16 */
+  color: #777777;
+  position: relative;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+}
+
+.old-price::before {
+  content: "";
+  position: absolute;
+  width: 102%;
+  height: 0.0625rem;
+  top: 50%;
+  left: 0;
+  background-color: #D93F3F;
+}
+
 .header {
   position: fixed;
   top: 0;
@@ -791,6 +811,15 @@ body::after {
   z-index: 5;
 }
 
+.footer__column ._spoller-active::before {
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
 .footer__logo {
   display: inline-block;
   margin-bottom: 1.6875rem;
@@ -819,12 +848,9 @@ body::after {
 .footer__item::before {
   position: absolute;
   font-size: 1.25rem;
-}
-
-.footer__item::before_spoller-active .footer__item::before {
-  -webkit-transform: rotate(180deg);
-      -ms-transform: rotate(180deg);
-          transform: rotate(180deg);
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
 }
 
 .footer__text {
@@ -944,6 +970,11 @@ body::after {
   -webkit-transform: translate(0, -50%);
       -ms-transform: translate(0, -50%);
           transform: translate(0, -50%);
+}
+
+.main-slider__arrows .swiper-button-disabled {
+  background-color: #D84727;
+  color: #fff;
 }
 
 .main-slider__arrow {
@@ -1207,27 +1238,6 @@ body::after {
   margin-bottom: 0.375rem;
 }
 
-.item-monthly-deals__old-price {
-  line-height: 1.5;
-  /* 24/16 */
-  color: #777777;
-  position: relative;
-  padding: 0rem 0.125rem;
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
-}
-
-.item-monthly-deals__old-price::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 0.0625rem;
-  top: 50%;
-  left: 0;
-  background-color: #D93F3F;
-}
-
 .item-monthly-deals__price {
   font-size: 1.5rem;
   line-height: 1.33;
@@ -1285,6 +1295,337 @@ body::after {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
+}
+
+.news__container {
+  position: relative;
+  z-index: 3;
+}
+
+.news__title {
+  margin-bottom: 2.625rem;
+  gap: 4.0625rem;
+}
+
+.news__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.news__item {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 31.5%;
+          flex: 0 0 31.5%;
+  /* 350/1110 */
+}
+
+.news__image {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  position: relative;
+}
+
+.news__image::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #F1DDC9;
+  -webkit-transform: translate(39%, -15%);
+      -ms-transform: translate(39%, -15%);
+          transform: translate(39%, -15%);
+}
+
+.news__image::after {
+  content: "";
+  position: absolute;
+  z-index: 4;
+  width: 112%;
+  right: 0;
+  padding-bottom: 99%;
+  background: url("../img/news/decor.svg") 0 0/100% no-repeat;
+  -webkit-transform: translate(39%, -15%);
+      -ms-transform: translate(39%, -15%);
+          transform: translate(39%, -15%);
+}
+
+.news__image img {
+  max-width: 100%;
+  position: relative;
+  z-index: 5;
+}
+
+.item-news__subtitle {
+  font-family: "Taviraj";
+  font-size: 1.25rem;
+  line-height: 2;
+  /* 40/20 */
+  letter-spacing: 0.02em;
+  color: #777777;
+}
+
+.item-news__subtitle:not(:last-child) {
+  margin-bottom: 0.5rem;
+}
+
+.item-news__title {
+  font-family: "Taviraj";
+  font-size: 2.25rem;
+  line-height: 1.33;
+  /* 48/36 */
+  letter-spacing: 0.02em;
+  color: #333333;
+}
+
+.item-news__title:not(:last-child) {
+  margin-bottom: 2.8125rem;
+}
+
+.model-line__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.model-line__body {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.model-line__title:not(:last-child) {
+  margin-bottom: 3.25rem;
+}
+
+.footer-model-line {
+  position: relative;
+  text-align: center;
+}
+
+.footer-model-line::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 0.01875rem;
+  top: 50%;
+  left: 0;
+  background-color: #999999;
+}
+
+.footer-model-line__body {
+  position: relative;
+  text-align: center;
+  z-index: 2;
+  background-color: #F7F6F4;
+  display: inline-block;
+  padding: 0rem 1.75rem;
+}
+
+.card-model-line__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+
+.card-model-line__body:not(:last-child) {
+  margin-bottom: 2rem;
+}
+
+.card-model-line__image-ibg_contain {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 8.1875rem;
+          flex: 0 0 8.1875rem;
+  padding-bottom: 37.9%;
+  /* 131/345 */
+  background-color: #F1DDC9;
+  overflow: hidden;
+}
+
+.card-model-line__image-ibg_contain img {
+  width: 100%;
+  height: 100%;
+  padding: 0.9375rem 0rem;
+  -webkit-transition: -webkit-transform 0.3s ease 0s;
+  transition: -webkit-transform 0.3s ease 0s;
+  -o-transition: transform 0.3s ease 0s;
+  transition: transform 0.3s ease 0s;
+  transition: transform 0.3s ease 0s, -webkit-transform 0.3s ease 0s;
+}
+
+.info__mame {
+  font-family: "Taviraj";
+  font-size: 1.5rem;
+  line-height: 1.33;
+  /* 32/24 */
+  letter-spacing: 0.02em;
+  color: #333333;
+}
+
+.info__mame:not(:last-child) {
+  margin-bottom: 0.5rem;
+}
+
+.info__price {
+  font-family: "Taviraj";
+  font-weight: 500;
+  line-height: 1.42;
+  /* 40/28 */
+  letter-spacing: 0.02em;
+  color: #222222;
+}
+
+.testimonial {
+  padding-top: 0.5rem;
+}
+
+.testimonial__container {
+  position: relative;
+}
+
+.testimonial__container::after {
+  content: "";
+  position: absolute;
+  width: 45.175439%;
+  padding-bottom: 26.315789%;
+  top: 0;
+  left: 0;
+  background-color: #F1DDC9;
+  -webkit-transform: translate(-32.0388349515%, 0);
+      -ms-transform: translate(-32.0388349515%, 0);
+          transform: translate(-32.0388349515%, 0);
+}
+
+.testimonial__container::before {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  width: 38.6842105263%;
+  padding-bottom: 30.7894736842%;
+  background: url("../img/testimonial/decor.svg") 0 0/100% no-repeat;
+  -webkit-transform: translate(-40.8163265306%, -28.49002849%);
+      -ms-transform: translate(-40.8163265306%, -28.49002849%);
+          transform: translate(-40.8163265306%, -28.49002849%);
+}
+
+.testimonial__title {
+  margin-bottom: 0.625rem;
+  padding-left: 54%;
+  /* 600/1110 */
+}
+
+.testimonial__wrapper {
+  position: relative;
+  z-index: 2;
+}
+
+.testimonial__arrow {
+  position: relative;
+  z-index: 2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 1rem;
+  font-size: 2rem;
+  gap: 0.5rem;
+  color: #333333;
+}
+
+.testimonial__arrow .swiper-button-disabled::before {
+  font-size: 1.5rem;
+  color: #999999;
+  -webkit-transform: scale(0.7);
+      -ms-transform: scale(0.7);
+          transform: scale(0.7);
+  -webkit-transition: -webkit-transform 0.3s ease 0s;
+  transition: -webkit-transform 0.3s ease 0s;
+  -o-transition: transform 0.3s ease 0s;
+  transition: transform 0.3s ease 0s;
+  transition: transform 0.3s ease 0s, -webkit-transform 0.3s ease 0s;
+}
+
+.testimonial__prev {
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.slide-testimonial {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.slide-testimonial__image {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 44.5%;
+          flex: 1 0 44.5%;
+  /* 495/1110 */
+}
+
+.slide-testimonial__image img {
+  max-width: 100%;
+}
+
+.slide-testimonial__item {
+  padding-right: 3.6875rem;
+}
+
+.slide-testimonial__text {
+  line-height: 1.75;
+  /* 28/16 */
+  letter-spacing: 0.03em;
+  color: #333333;
+}
+
+.slide-testimonial__text:not(:last-child) {
+  margin-bottom: 1.875rem;
+}
+
+.slide-testimonial__name {
+  font-family: "Taviraj";
+  font-weight: 500;
+  font-size: 1.5rem;
+  line-height: 1.33;
+  /* 32/24 */
+  letter-spacing: 0.03em;
+  color: #333333;
+}
+
+.slide-testimonial__name:not(:last-child) {
+  margin-bottom: 0.125rem;
+}
+
+.slide-testimonial__name-info {
+  font-family: "Taviraj";
+  font-weight: 300;
+  line-height: 2;
+  /* 32/16 */
+  letter-spacing: 0.03em;
+  color: #777777;
 }
 
 .swiper {
@@ -1353,6 +1694,12 @@ body::after {
   }
 }
 
+@media (min-width: 69.375em) {
+  .card-model-line__body {
+    gap: 1.5rem;
+  }
+}
+
 @media (min-width: 71.25em) {
   .footer {
     padding-top: 3.1875rem;
@@ -1413,6 +1760,38 @@ body::after {
   .monthly-deals {
     margin-bottom: 7.8125rem;
   }
+
+  .news {
+    margin-bottom: 8.3125rem;
+  }
+
+  .news__body {
+    gap: 4.0625rem;
+  }
+
+  .model-line {
+    margin-bottom: 7.5rem;
+  }
+
+  .model-line__body {
+    gap: 2.1875rem;
+  }
+
+  .model-line__card {
+    margin-bottom: 3.4375rem;
+  }
+
+  .info__price {
+    font-size: 1.75rem;
+  }
+
+  .testimonial {
+    margin-bottom: 3.75rem;
+  }
+
+  .slide-testimonial {
+    gap: 2.8125rem;
+  }
 }
 
 @media (min-width: 90em) {
@@ -1470,6 +1849,10 @@ body::after {
 
   .header__action {
     gap: 0.9375rem;
+  }
+
+  .card-model-line__body {
+    gap: 0.625rem;
   }
 }
 
@@ -1542,6 +1925,45 @@ body::after {
 
   .monthly-deals {
     margin-bottom: 5rem;
+  }
+
+  .news {
+    margin-bottom: 3.125rem;
+  }
+
+  .news__body {
+    gap: 0.3125rem;
+  }
+
+  .model-line {
+    margin-bottom: 3.125rem;
+  }
+
+  .model-line__body {
+    gap: 0.625rem;
+  }
+
+  .model-line__card {
+    margin-bottom: 1.875rem;
+  }
+
+  .info__price {
+    font-size: 1.25rem;
+  }
+
+  .testimonial {
+    margin-bottom: 1.875rem;
+  }
+
+  .slide-testimonial {
+    gap: 0.9375rem;
+  }
+}
+
+@media (max-width: 69.375em) {
+  .model-line__body {
+    -ms-grid-columns: (1fr)[2];
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
@@ -1744,6 +2166,48 @@ body::after {
     -ms-grid-columns: (1fr)[1];
     grid-template-columns: repeat(1, 1fr);
   }
+
+  .news__body {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+    row-gap: 5.625rem;
+  }
+
+  .model-line__body {
+    -ms-grid-columns: auto;
+    grid-template-columns: auto;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+
+  .testimonial__container::after {
+    display: none;
+  }
+
+  .testimonial__container::before {
+    display: none;
+  }
+
+  .testimonial__title {
+    padding-left: 0;
+  }
+
+  .testimonial__arrow {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+
+  .slide-testimonial {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 @media (max-width: 47.99875em) and (max-width: 20em) {
@@ -1764,6 +2228,10 @@ body::after {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+  }
+
+  .footer-model-line__btn {
+    padding: 1.0625rem 3.75rem;
   }
 }
 
@@ -2019,6 +2487,102 @@ body::after {
       margin-bottom: calc(5rem + 2.8125 * (100vw - 20rem) / 51.25);
     }
 }
+
+@supports (margin-bottom: clamp( 3.125rem , 1.1006097561rem  +  10.1219512195vw , 8.3125rem )) {
+    .news {
+      margin-bottom: clamp( 3.125rem , 1.1006097561rem  +  10.1219512195vw , 8.3125rem );
+    }
+}
+
+@supports not (margin-bottom: clamp( 3.125rem , 1.1006097561rem  +  10.1219512195vw , 8.3125rem )) {
+    .news {
+      margin-bottom: calc(3.125rem + 5.1875 * (100vw - 20rem) / 51.25);
+    }
+}
+
+@supports (gap: clamp( 0.3125rem , -1.1509146341rem  +  7.3170731707vw , 4.0625rem )) {
+    .news__body {
+      gap: clamp( 0.3125rem , -1.1509146341rem  +  7.3170731707vw , 4.0625rem );
+    }
+}
+
+@supports not (gap: clamp( 0.3125rem , -1.1509146341rem  +  7.3170731707vw , 4.0625rem )) {
+    .news__body {
+      gap: calc(0.3125rem + 3.75 * (100vw - 20rem) / 51.25);
+    }
+}
+
+@supports (margin-bottom: clamp( 3.125rem , 1.4176829268rem  +  8.5365853659vw , 7.5rem )) {
+    .model-line {
+      margin-bottom: clamp( 3.125rem , 1.4176829268rem  +  8.5365853659vw , 7.5rem );
+    }
+}
+
+@supports not (margin-bottom: clamp( 3.125rem , 1.4176829268rem  +  8.5365853659vw , 7.5rem )) {
+    .model-line {
+      margin-bottom: calc(3.125rem + 4.375 * (100vw - 20rem) / 51.25);
+    }
+}
+
+@supports (gap: clamp( 0.625rem , 0.0152439024rem  +  3.0487804878vw , 2.1875rem )) {
+    .model-line__body {
+      gap: clamp( 0.625rem , 0.0152439024rem  +  3.0487804878vw , 2.1875rem );
+    }
+}
+
+@supports not (gap: clamp( 0.625rem , 0.0152439024rem  +  3.0487804878vw , 2.1875rem )) {
+    .model-line__body {
+      gap: calc(0.625rem + 1.5625 * (100vw - 20rem) / 51.25);
+    }
+}
+
+@supports (margin-bottom: clamp( 1.875rem , 1.2652439024rem  +  3.0487804878vw , 3.4375rem )) {
+    .model-line__card {
+      margin-bottom: clamp( 1.875rem , 1.2652439024rem  +  3.0487804878vw , 3.4375rem );
+    }
+}
+
+@supports not (margin-bottom: clamp( 1.875rem , 1.2652439024rem  +  3.0487804878vw , 3.4375rem )) {
+    .model-line__card {
+      margin-bottom: calc(1.875rem + 1.5625 * (100vw - 20rem) / 51.25);
+    }
+}
+
+@supports (font-size: clamp( 1.25rem , 1.0548780488rem  +  0.9756097561vw , 1.75rem )) {
+    .info__price {
+      font-size: clamp( 1.25rem , 1.0548780488rem  +  0.9756097561vw , 1.75rem );
+    }
+}
+
+@supports not (font-size: clamp( 1.25rem , 1.0548780488rem  +  0.9756097561vw , 1.75rem )) {
+    .info__price {
+      font-size: calc(1.25rem + 0.5 * (100vw - 20rem) / 51.25);
+    }
+}
+
+@supports (margin-bottom: clamp( 1.875rem , 1.1432926829rem  +  3.6585365854vw , 3.75rem )) {
+    .testimonial {
+      margin-bottom: clamp( 1.875rem , 1.1432926829rem  +  3.6585365854vw , 3.75rem );
+    }
+}
+
+@supports not (margin-bottom: clamp( 1.875rem , 1.1432926829rem  +  3.6585365854vw , 3.75rem )) {
+    .testimonial {
+      margin-bottom: calc(1.875rem + 1.875 * (100vw - 20rem) / 51.25);
+    }
+}
+
+@supports (gap: clamp( 0.9375rem , 0.2057926829rem  +  3.6585365854vw , 2.8125rem )) {
+    .slide-testimonial {
+      gap: clamp( 0.9375rem , 0.2057926829rem  +  3.6585365854vw , 2.8125rem );
+    }
+}
+
+@supports not (gap: clamp( 0.9375rem , 0.2057926829rem  +  3.6585365854vw , 2.8125rem )) {
+    .slide-testimonial {
+      gap: calc(0.9375rem + 1.875 * (100vw - 20rem) / 51.25);
+    }
+}
 }
 
 @media (min-width: 20em) and (max-width: 48em) {
@@ -2031,6 +2595,20 @@ body::after {
 @supports not (font-size: clamp( 2.5rem , 1.6071428571rem  +  4.4642857143vw , 3.75rem )) {
     .slide-main__title {
       font-size: calc(2.5rem + 1.25 * (100vw - 20rem) / 28);
+    }
+}
+}
+
+@media (min-width: 48em) and (max-width: 69.375em) {
+@supports (gap: clamp( 0.625rem , -1.3399122807rem  +  4.0935672515vw , 1.5rem )) {
+    .card-model-line__body {
+      gap: clamp( 0.625rem , -1.3399122807rem  +  4.0935672515vw , 1.5rem );
+    }
+}
+
+@supports not (gap: clamp( 0.625rem , -1.3399122807rem  +  4.0935672515vw , 1.5rem )) {
+    .card-model-line__body {
+      gap: calc(0.625rem + 0.875 * (100vw - 48rem) / 21.375);
     }
 }
 }
@@ -2087,5 +2665,10 @@ body::after {
     -webkit-transform: scale(1.05);
         -ms-transform: scale(1.05);
             transform: scale(1.05);
+  }
+
+  .card-model-line__body:hover {
+    -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
   }
 }
